<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-14dp">

    <TextView
        android:id="@+id/DateOfBirth_textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="@dimen/text_layout_height"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:text="@string/DateOfBirth_TextViewValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/surname_editText" />


    <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:contextClickable="true"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/day_spinner"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:fadeScrollbars="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toEndOf="@+id/month_spinner"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/gender_textView"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="@dimen/text_layout_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Gender_TextViewValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/month_spinner" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/gender_textView">


        <RadioButton
            android:id="@+id/gender_male_radioButton"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:text="@string/Gender_Male_RadioButtonValue"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="180dp"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="394dp" />

        <RadioButton
            android:id="@+id/gender_female_radioButton"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/Gender_Female_RadioButtonValue"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="180dp"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="394dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/CodiceFiscale_textviewValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="@dimen/text_layout_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/name_EditTextValue"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <EditText
        android:id="@+id/surname_editText"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="@dimen/text_layout_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/surname_EditTextValue"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <AutoCompleteTextView
        android:id="@+id/place_of_birth_AutoCompTextView"
        android:layout_width="@dimen/text_layout_width"
        android:layout_height="@dimen/text_layout_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/PlaceOfBirth_EditTextValue"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/surname_editText" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/submit_btnValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="7dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="381dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="292dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>